--- a/jenkins/2.流水线的执行流程.md
+++ b/jenkins/2.流水线的执行流程.md
@@ -7,3 +7,23 @@
 + 如果创建了一个声明式流水线，有一个特殊的triggers指令可以用来定义流水线的触发类型
 
 【<font color=red>注意</font>】这里所讨论的触发器不适用于多分支流水线、GitHub组织，以及Bitbucket团队/项目类型的任务。这些类型的任务都需要有相应的Jenkinsfile作为标识。另外，当代码有改动时可通过如webhook来通知Jenkins触发任务。
+
+### 2. 在其他项目构建后构建
+选择这种方式允许在一个或者多个其他项目之后开始你的项目构建。你可以选择其他项目构建的状态（稳定的、不稳定的或者失败的）。对于一个脚本式流水线，在任务Job1成功后构建你的流水线，其语法如下所示：
+```
+properties (
+    pipelineTriggers ([
+        upstream (
+            // 构建的结束状态
+            threshold: hudson.model.Result.SUCCESS,
+            upstreamProjects: 'Job1'
+        )
+    ])
+)
+```
+如果你需要列出多个任务，可以使用逗号分隔。如果你需要指定一个任务的某个分支（例如，多分支任务），在任务名称的后面添加斜线和分支名称（如'job/master'）。
+
+
+3. 周期性构建
+这种方法提供了一种cron类型的功能，可以按照某个时间间隔启动任务。虽然这是构建的一种方法。但是对于持续集成而言不是最佳选择，持续集成要求基于探测代码管理更新进行构建。但是周期构建可以用于其他类型的Jnekins应用，例如，以特别的间隔启动任务来避免资源冲突。
+
